Fixed gap between footers elements

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -2,7 +2,7 @@
   background: #0b0c0d;
   display: flex;
   flex-direction: row;
-
+  column-gap: 150px;
   // margin-left: 84px;
   // margin-right: 127px;
   padding: 38px 127px 84px 121px;
